[package]
name = "thermal"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
escpos = { version = "0.16.0", features = ["full"] }
rusb = "0.9.4"
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.141"
actix = "0.13.5"
actix-web = "4.10.2"
futures = "0.3.31"
log = "0.4.27"
utoipa = {version="5.4.0", features = ["actix_extras"]}
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = {version="9.0.2", features=["actix-web","debug-embed"]}